Subscription support added to Apollo Client in order to test message consumption.

--- a/scss/common/_typography.scss
+++ b/scss/common/_typography.scss
@@ -317,6 +317,14 @@ $i: 30;
     $i: $i - 2;
 }
 
+.messages {
+    position: absolute;
+    color: white;
+    top: 5vh;
+    width: 100%;
+    text-align: center;
+}
+
 // progress::-moz-progress-bar, progress::-webkit-progress-value {
 //   background-image:
 // 	   -webkit-linear-gradient(-45deg,
